--- a/style.css
+++ b/style.css
@@ -13,12 +13,6 @@ body {
     background-color: #dde2d1;
 }
 
-/* SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg */
-/* JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb */
-
-/* SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg */
-/* JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb */
-
 form {
     width: 440px;
     background-color: #fff;
@@ -127,8 +121,23 @@ form button:active { transform: scale(.97); }
 
 .next-form { transform: translateX(-50%); }
 
-/* SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg */
-/* JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb */
+.footer{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:30px;   /* Height of the footer */
+    background: transparent;
 
-/* SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg */
-/* JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb */
+    
+
+}
+.f_items{
+    
+    left: 0;
+    margin-right: 8px;
+    float: right;
+    font-size: smaller;
+    enable-background: accumulate;
+    
+   
+}
